--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,40 @@ body {
     justify-content: center;
 }
 
+#textBox1 {
+    width: 120px;
+    height: 30px;
+    right: 50%;
+    top: 65%;
+    background-color: #e29126;
+    position: absolute;
+    text-align: center;
+    font-size: 24px;
+}
+
+#textBox2 {
+    width: 120px;
+    height: 30px;
+    left: 50%;
+    top: 65%;
+    background-color: #e29126;
+    position: absolute;
+    text-align: center;
+    font-size: 24px;
+}
+
+#textBox3 {
+    width: 150px;
+    height: 26px;
+    left: 50%;
+    transform: translate(-50%);
+    top: 80%;
+    background-color: #ffffff;
+    position: absolute;
+    text-align: center;
+    font-size: 20px;
+}
+
 #circle2 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
@@ -32,6 +66,7 @@ body {
     border-radius: 100%;
     background-color: #92e6da;
     position: absolute;
+    top: 30%;
     align-items: center;
     justify-content: center;
     cursor: pointer;
@@ -42,9 +77,9 @@ body {
     display: grid;
     grid-template-areas: 'verde vermelho'
         'amarelo azul';
-    grid-gap: 10px;
-    border: 1px solid #ffffff;
-    background-color: #ffffff;
+    grid-gap: 6px;
+    border: 1px solid black;
+    background-color: black;
     border-radius: 100%;
     width: 600px;
     height: 600px;
