--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,34 +24,22 @@ body {
 }
 
 #textBox1 {
-    width: 120px;
-    height: 30px;
+    width: 90px;
+    height: 25px;
     right: 50%;
-    top: 65%;
+    top: 70%;
     background-color: #e29126;
     position: absolute;
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 #textBox2 {
-    width: 120px;
-    height: 30px;
+    width: 90px;
+    height: 25px;
     left: 50%;
-    top: 65%;
+    top: 70%;
     background-color: #e29126;
-    position: absolute;
-    text-align: center;
-    font-size: 24px;
-}
-
-#textBox3 {
-    width: 150px;
-    height: 26px;
-    left: 50%;
-    transform: translate(-50%);
-    top: 80%;
-    background-color: #ffffff;
     position: absolute;
     text-align: center;
     font-size: 20px;
@@ -61,16 +49,17 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
     display: flex;
-    width: 100px;
-    height: 100px;
+    width: 105px;
+    height: 105px;
     border-radius: 100%;
     background-color: #92e6da;
     position: absolute;
-    top: 30%;
+    /* top: 40%; */
     align-items: center;
     justify-content: center;
+    text-align: center;
     cursor: pointer;
-    border: 2px solid #ff0000;
+    border: 2px solid #ffffff;
 }
 
 #genius {
